# truevote

./: CMakeLists.txt  README.md  a.out  candidates.csv  main.cpp  mainwindow.cpp  mainwindow.h  result.txt  voters.csv
data/: candidates.csv  result.txt  voters.csv
media/: presentation.pptx
